# game-of-life-simulation

./: CMakeLists.txt  README.md
src/: Cell.cpp  Cell.h  Generation.cpp  Generation.h  cell.cpp  cell.h  constants.h  generation.cpp  generation.h  main.cpp
